optimize subscription cache population mechanism and improve the stability of related integration cases